// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Distribution gap renders 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledBox-bStriS hfugtn"
  >
    <div
      class="StyledBox-bStriS bPnMAf"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs ebfbnM"
    />
    <div
      class="StyledBox-bStriS bPnMAf"
    >
      <div
        class="StyledBox-bStriS emBXpW"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs iswUbf"
      />
      <div
        class="StyledBox-bStriS fSVBlP"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-bStriS hfugtn"
  >
    <div
      class="StyledBox-bStriS bPnMAf"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs jRRtxU"
    />
    <div
      class="StyledBox-bStriS bPnMAf"
    >
      <div
        class="StyledBox-bStriS emBXpW"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs jrJmqe"
      />
      <div
        class="StyledBox-bStriS fSVBlP"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-bStriS hfugtn"
  >
    <div
      class="StyledBox-bStriS bPnMAf"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs cCIVcT"
    />
    <div
      class="StyledBox-bStriS bPnMAf"
    >
      <div
        class="StyledBox-bStriS emBXpW"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs cbEIii"
      />
      <div
        class="StyledBox-bStriS fSVBlP"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-bStriS hfugtn"
  >
    <div
      class="StyledBox-bStriS bPnMAf"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs edutSJ"
    />
    <div
      class="StyledBox-bStriS bPnMAf"
    >
      <div
        class="StyledBox-bStriS emBXpW"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs iTpocx"
      />
      <div
        class="StyledBox-bStriS fSVBlP"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Distribution renders 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
/>
`;

exports[`Distribution values renders 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledBox-bStriS hfugtn"
  >
    <div
      class="StyledBox-bStriS PbTUu"
    >
      <span>
        20
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs ebfbnM"
    />
    <div
      class="StyledBox-bStriS gaARwK"
    >
      <div
        class="StyledBox-bStriS bPnMAf"
      >
        <span>
          3
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs iswUbf"
      />
      <div
        class="StyledBox-bStriS eztPhN"
      >
        <div
          class="StyledBox-bStriS emBXpW"
        >
          <span>
            2
          </span>
        </div>
        <div
          class="StyledBox__StyledBoxGap-ixLlSs ebfbnM"
        />
        <div
          class="StyledBox-bStriS fSVBlP"
        >
          <span>
            1
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
